Rewrite allocation mechanism