@@ -10,6 +10,16 @@ subprojects {
 		modularity.inferModulePath = true
 	}
 
+	tasks.withType(JavaCompile) {
+		options.compilerArgs += "--enable-preview"
+	}
+	tasks.withType(Test) {
+		jvmArgs += "--enable-preview"
+	}
+	tasks.withType(JavaExec) {
+		jvmArgs += "--enable-preview"
+	}
+
 	afterEvaluate {
 		repositories {
 			jcenter()
